--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.linK {
+  cursor: pointer;
+}
+
 ::-webkit-scrollbar {
   height: 10px;
 }
