--- a/style/style.scss
+++ b/style/style.scss
@@ -19,6 +19,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.linK {
+  cursor: pointer;
+}
+
 ::-webkit-scrollbar {
   // display: none;
   height: 10px;
