--- a/style/style.css
+++ b/style/style.css
@@ -483,6 +483,16 @@ body {
   }
 }
 
+.content-headerbox-right .user-name {
+  margin-left: 20px;
+  font-weight: bold;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 @media screen and (max-width: 420px) {
   .content-headerbox {
     padding: 10px;
@@ -614,6 +624,7 @@ body {
 }
 
 .sales-category-view-more a {
+  cursor: pointer;
   width: 120px;
   background: #fafafa;
   display: -webkit-box;
