--- a/style/style.scss
+++ b/style/style.scss
@@ -261,6 +261,10 @@ body {
     //Concentration...................................................
     //Concentration...................................................
 
+    .signout_form-btn {
+      margin-top: 20px;
+    }
+
     .menu-bar {
       display: none;
 
