--- a/style/signup.css
+++ b/style/signup.css
@@ -52,6 +52,19 @@ body {
 }
 
 .Main-container-login-container .form-btn button {
+  margin: 10px 0;
+  cursor: pointer;
+  font-size: 15px;
+  height: 32px;
+  width: 100%;
+  background-color: #6ca6dd;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  text-shadow: 0px 0px 3px black;
+}
+
+.signout-btn {
   cursor: pointer;
   font-size: 15px;
   height: 32px;
