creating place order page

--- a/style/404.scss
+++ b/style/404.scss
@@ -39,17 +39,17 @@
   font-weight: bolder;
 }
 
-.btn {
-  outline: none;
-  border: none;
-  background-color: #6ca6dd;
-  color: white;
-  font-weight: bolder;
-  height: 30px;
-  border-radius: 3px;
-  width: 100px;
-  transition: background-color 1s, box-shadow 1s;
-}
+// .btn {
+//   outline: none;
+//   border: none;
+//   background-color: #6ca6dd;
+//   color: white;
+//   font-weight: bolder;
+//   height: 30px;
+//   border-radius: 3px;
+//   width: 100px;
+//   // transition: background-color 1s, box-shadow 1s;
+// }
 
 .btn:hover {
   background-color: #4791d6;
