--- a/style/cartPage.scss
+++ b/style/cartPage.scss
@@ -261,6 +261,9 @@
           font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
           font-weight: bold;
 
+          &:hover {
+            box-shadow: 0px 0px 5px #6ca6dd;
+          }
           @include tabSize750 {
             height: 25px;
             border-radius: 6px;
