--- a/Return.scss
+++ b/Return.scss
@@ -4,24 +4,40 @@
   }
 }
 
-@mixin tab {
+//Tab column;
+
+@mixin tabSize930 {
   @media screen and (max-width: 930px) {
     @content;
   }
 }
 
-@mixin tab2 {
-  @media screen and (max-width: 1196px) {
+@mixin tabSize1030 {
+  @media screen and (max-width: 1030px) {
     @content;
   }
 }
+
+@mixin tabSize980 {
+  @media screen and (max-width: 980px) {
+    @content;
+  }
+}
+
+@mixin tabSize653 {
+  @media screen and (max-width: 653px) {
+    @content;
+  }
+}
+
+// @mixin tab
 
 * {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  list-style-type: none;
+  // list-style-type: none;
   text-decoration: none;
   scrollbar-width: 100px;
   scrollbar-color: rgb(10, 105, 157) blue;
@@ -62,7 +78,7 @@ body {
 
 .right-container {
   flex: 1 1 auto;
-  height: 100vh;
+  // height: 100vh;
   overflow-y: scroll;
 
   &_content-container {
@@ -89,19 +105,19 @@ body {
     padding-right: 15px;
     display: none;
 
-    @include tab {
+    @include tabSize930 {
       display: block;
       font-size: 1.5rem;
     }
 
     @include phone {
-      position: absolute;
+      // position: absolute;
       left: 10px;
       top: 40%;
     }
   }
 
-  @include tab {
+  @include tabSize930 {
     position: fixed;
     width: 300px;
 
@@ -191,7 +207,7 @@ body {
       color: #000;
     }
 
-    @include tab {
+    @include tabSize930 {
       flex: 1;
       justify-content: end;
     }
@@ -232,7 +248,7 @@ body {
         }
       }
 
-      @include tab() {
+      @include tabSize930() {
         display: none;
       }
     }
@@ -266,7 +282,7 @@ body {
             @include phone {
               text-align: center;
               display: block;
-              font-size: 15px;
+              font-size: 12.5px;
               // padding: 0px 25px;
             }
           }
@@ -306,7 +322,7 @@ body {
             @include phone {
               text-align: center;
               display: block;
-              font-size: 15px;
+              font-size: 12.5px;
               // padding: 0px 25px;
             }
           }
@@ -353,19 +369,8 @@ body {
 
   @include phone {
     padding: 10px;
-    flex-direction: column;
+    // flex-direction: column;
   }
-}
-
-.main-Content {
-  // margin-top: 190px;
-}
-
-.main-area {
-}
-
-.productMain-content {
-  // overflow-y: scroll;
 }
 
 .product-cards {
@@ -543,34 +548,39 @@ body {
 
 // Product screen section
 
+//Left-Bar 1
 .left-bar {
   min-height: 200px;
   // flex: 1;
-  margin: 0px 10px;
+  margin: 0px 30px;
   display: flex;
   flex-direction: column;
+  margin-bottom: 30px;
+  width: 900px;
+  // min-width: ;
 
   &Top {
-    width: 100%;
     display: flex;
     margin-bottom: 70px;
     overflow-x: auto;
-    // justify-content: center;
-  }
 
-  &Topimg {
-    flex-shrink: 0;
-    margin: 5px;
-    // border: 1px solid #000;
+    &img {
+      margin: 12px;
+      flex-shrink: 0;
+      width: 275px;
+      height: 275px;
 
-    width: 300px;
-    height: 300px;
+      & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: contain;
+      }
 
-    & img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: contain;
+      @include tabSize1030 {
+        width: 240px;
+        height: 240px;
+      }
     }
   }
 
@@ -578,19 +588,146 @@ body {
     &image {
       // border: 1px solid #000;
       height: 25em;
-      width: 60rem;
+      // width: 500px;
+
       img {
         height: 100%;
         width: 100%;
         object-fit: cover;
         object-position: center;
       }
+
+      @include tabSize1030 {
+        height: 20em;
+        width: 100%;
+      }
+    }
+  }
+
+  @include tabSize980 {
+    display: none;
+  }
+}
+
+//Left-Bar 2
+
+.left-bar2 {
+  min-height: 200px;
+  margin: 0px 10px;
+  // display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+  display: none;
+
+  &Top {
+    width: 100%;
+    display: flex;
+    margin-bottom: 70px;
+    overflow-x: auto;
+
+    &img {
+      margin: 5px;
+      // border: 1px solid #000;
+
+      width: 300px;
+      height: 300px;
+
+      & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: contain;
+      }
+
+      @include tabSize1030 {
+        width: 250px;
+        height: 250px;
+      }
+
+      @include tabSize980 {
+        flex-shrink: 0;
+      }
+
+      @include tabSize653 {
+        width: 200px;
+        height: 200px;
+      }
+
+      @include phone {
+        width: 165px;
+        height: 165px;
+      }
+    }
+
+    @include tabSize980 {
+      width: 85vw;
+      margin-bottom: 45px;
+    }
+
+    @include phone {
+      margin-bottom: 15px;
+    }
+  }
+
+  &-buttomimg {
+    width: 500px;
+    height: 250px;
+
+    @include tabSize653 {
+      width: 350px;
+      height: 200px;
+    }
+
+    @include phone {
+      width: 250px;
+      height: 165px;
+    }
+  }
+
+  &Buttom {
+    &image {
+      // border: 1px solid #000;
+      height: 0em;
+      width: 60rem;
+
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+
+      @include tabSize1030 {
+        height: 20em;
+        width: 250px;
+      }
+
+      @include tabSize980 {
+        width: 300px;
+        height: 300px;
+
+        margin: 5px;
+      }
+    }
+  }
+
+  @include tabSize980 {
+    display: block;
+    flex-direction: row;
+
+    ::-webkit-scrollbar {
+      height: 7px;
+    }
+  }
+
+  @include phone {
+    ::-webkit-scrollbar {
+      height: 4px;
     }
   }
 }
 
 .right-bar {
-  // flex: 1;
   background-color: #fafafa;
   padding: 50px 10px;
   width: 500px;
@@ -611,11 +748,20 @@ body {
   }
 
   &ContentPrice-tag {
-    // margin: 20px 0;
-
-    & span {
+    &-main {
+      padding-top: 10px;
       font-family: cambria;
-      font-size: 12.5px;
+      font-size: 13px;
+      margin: 10px 0;
+      display: block;
+    }
+
+    &-recent {
+      // background-color: #222;
+      padding-top: 10px;
+      font-family: cambria;
+      font-size: 11.6px;
+      opacity: 0.69;
       margin: 10px 0;
       display: block;
     }
@@ -656,8 +802,8 @@ body {
         width: 100%;
         height: 40px;
         border-radius: 15px;
+        background-color: #6ca6dd;
 
-        background-color: rgb(67, 122, 240);
         outline: none;
         border: none;
         cursor: pointer;
@@ -667,183 +813,352 @@ body {
         font-weight: bold;
       }
       & button:active {
-        background-color: rgb(38, 90, 202);
+        background-color: #5e96ca;
+      }
+    }
+  }
+  @include tabSize653 {
+    display: none;
+  }
+}
+
+.right-bar2 {
+  display: none;
+
+  &Content_measureMent-box {
+    text-align: center;
+    border: 1px solid #000;
+    height: 90px;
+    margin-bottom: 10px;
+  }
+
+  &Content_description-box {
+    border: 1px solid #000;
+    height: 90px;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+
+  &Content-left_Price-tag {
+    &-main {
+      padding-top: 10px;
+      font-family: cambria;
+      margin: 10px 0;
+      display: block;
+      font-size: 1px;
+      color: #003d59;
+
+      
+    }
+
+    &-recent {
+      // background-color: #222;
+      padding-top: 10px;
+      font-family: cambria;
+      font-size: 11.6px;
+      opacity: 0.69;
+      margin: 10px 0;
+      display: block;
+    }
+  }
+
+  &Content_name-tag {
+    margin-bottom: 30px;
+    font-size: 20px;
+    font-family: "Reggae One", cursive;
+  }
+
+  &Content_image {
+    width: 150px;
+    height: 150px;
+    margin-bottom: 10px;
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: contain;
+    }
+  }
+
+  &ContentProduct-details {
+    margin: 30px 0;
+  }
+
+  &Content_addButton {
+    margin-top: 50px;
+
+    & a {
+      display: block;
+
+      & button {
+        width: 100%;
+        height: 40px;
+        border-radius: 15px;
+        background-color: #6ca6dd;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        color: #fff;
+        font-size: 17px;
+        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+        font-weight: bold;
+      }
+
+      & button:active {
+        background-color: #5e96ca;
+      }
+    }
+  }
+
+  @include tabSize653 {
+    display: block;
+    background-color: #fafafa;
+    // height: 260px;
+    width: 90%;
+
+    &Content {
+      padding: 10px;
+      display: flex;
+      flex-wrap: wrap;
+
+      &-left {
+        // width: 100px;
+        // flex: 1;
+        flex: 0 1 40vw;
+
+        &_name-tag h1 {
+          font-size: 25px;
+          font-family: "Reggae One", cursive;
+        }
+
+        &_Price-tag {
+          &-discount {
+            margin: 10px;
+
+            & h1 {
+              font-size: 17px;
+            }
+          }
+
+          &-main {
+            & h1 {
+              font-size: 19px;
+            }
+          }
+
+          &-recent {
+            & h1 {
+              font-size: 15px;
+            }
+          }
+        }
+
+        &_image {
+          // border: 1px solid #000;
+          width: 80px;
+          height: 80px;
+          margin-bottom: 10px;
+
+          & img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: contain;
+          }
+        }
+      }
+
+      &-right {
+        flex: 1;
+
+        &_measureMent-box {
+          text-align: center;
+          border: 1px solid #0000005d;
+          height: 90px;
+          margin-bottom: 10px;
+          min-width: 250px;
+
+          @include phone {
+            min-width: 200px;
+          }
+        }
+
+        &_description-box {
+          text-align: center;
+          border: 1px solid #0000005d;
+          height: 90px;
+          margin-bottom: 10px;
+          min-width: 250px;
+
+          @include phone {
+            min-width: 200px;
+          }
+        }
+
+        &_addButton {
+          margin: 10px 0;
+          display: flex;
+          justify-content: center;
+
+          & a {
+            display: block;
+            width: 300px;
+
+            & button {
+              width: 100%;
+              height: 33px;
+              border-radius: 15px;
+              background-color: #6ca6dd;
+              outline: none;
+              border: none;
+              cursor: pointer;
+              color: #fff;
+              font-size: 14px;
+              font-family: Cambria, Cochin, Georgia, Times, "Times New Roman",
+                serif;
+              font-weight: bold;
+
+              @include phone {
+                height: 25px;
+              }
+            }
+            & button:active {
+              background-color: #5c95ca;
+            }
+
+            @include phone {
+              width: 120px;
+            }
+          }
+        }
       }
     }
   }
 }
 
-.main-areaContent {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-shrink: max($numbers: 10);
+.productMain-content {
+  .main-area {
+    &Content {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      flex-shrink: max($numbers: 10);
+    }
+
+    &_related-content {
+      margin-top: 50px;
+    }
+  }
 }
 
-.contact-container {
-  margin-top: 65px;
+@mixin phoneTwo {
+  @media screen and (max-width: 500px) {
+    @content;
+  }
+}
+
+.Return-container{
+  margin-top: 150px;
+  display: flex;
+  justify-content: center;
   width: 100%;
-  font-family: Arial, Helvetica, sans-serif;
-}
 
-.contact-box {
-  background-image: url(./image/customer-care.jpg);
-  justify-content: center;
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  height: 60vh;
-}
+  @include phoneTwo{
+    margin-top: 95px;
+  }
 
-.contact-box-msg {
-  text-align: center;
-  font-family: cursive;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
-}
+  &-box{
+    width: 85%;
+    margin: 10px 0;
+    
+    @include phoneTwo{
+      width: 100%;
+      margin: 0 5px;
+    }
+  }
 
-.contact-box-msg-h1 {
-  color: white;
-  font-family: fantasy;
-}
-
-.contact-box-msg-p {
-  color: white;
-  font-family: fantasy;
-  color: white;
-}
-
-.contact-box-msg-h1,
-.contact-box-msg-p {
-  text-shadow: 5px 5px 5px black;
-  font-family: cursive;
-}
-
-.contact-guide {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  height: 40vh;
-  background-color: white;
-}
-
-.contact-box-guide-call {
-  background-color: white;
-  box-shadow: 3px 3px 3px 3px #b8b7b7;
-  width: 28rem;
-  display: flex;
-  
-  align-items: center;
-  border-radius: 5px;
-  text-align: center;
-  height: 250px;
-  margin: 0 7px;
-}
-
-.contact-box-guide-box {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  // justify-content: space-around;
-  margin: 0 20px;
-  // background-color: red;
-  bottom: 15px;
-  width: 95%;
-}
-
-.phone {
-  font-size: 40px;
-}
-
-.contact-box-guide-call-p {
-  line-height: 1.5em;
-}
-
-.phone,
-.contact-box-guide-call-h3,
-.contact-box-guide-call-p {
-  padding: 5px 0;
-}
-
-.contact-box-guide-call-a-1 {
-  background-color: #6ca6dd
-  ;
-  padding: 8px 15px;
-  width: auto;
-  height: auto;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  color: white;
-  font-weight: bolder;
-  border-radius: 3px;
-  transition: background-color 0.5s;
-}
-
-.contact-box-guide-call-a-1:hover {
-  background-color: #0e7dc2;
-}
-
-.contact-box-guide-call-a {
-  font-size: 14px;
-}
-
-@media screen and (max-width: 530px) {
-  .contact-box-guide-call-box {
-    // font-size: 15px;
+  &-Headertxt{
+    border-top: 1px solid #dfdcdc;
+    border-bottom: 1px solid #dfdcdc;
     height: auto;
-    // padding: 0px 13px;
+    padding: 15px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+    @include phoneTwo{
+      font-size: 10px;
+    }
   }
 
-  .contact-guide{
-    height: 30vh;
+  &-contentTxtbox{
+    margin: 25px 0;
   }
 
-  .contact-box-guide-box {
-    bottom: 80px;
+  &-contentTxtQ{
+    display: flex;
+    background-color:#f5f5f5;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    height: auto;
+    border: 1px solid #dfdcdc;
+    padding: 10px 5px;
+    flex-wrap: wrap;
+    margin-top: 10px;
+    transition: background-color 1s 0.2s;
+    
+    @include phoneTwo{
+      font-size: 13px;
+    }
+    
   }
 
-  .contact-box-guide-call {
-    height: 190px;
+  &-contentTxtQ:hover{
+    background-color:#e6e3e3d0;
+  }
+  
+  &-contentTxtQFont{
+    margin-top: 3px;
+  }
+  
+  &-contentTxtboxAns{
+    padding-left: 15px;
+    margin-top: 30px;
+    display: none;
+    line-height: 1.5em;
+    
+    @include phoneTwo{
+      font-size: 13px;
+      line-height: 1.5em;
+    }
   }
 
-  .phone {
-    font-size: 30px;
+  &-contentTxtboxAns-li{
+    list-style-type: disc;
+    margin-top: 10px;
   }
 
-  .contact-box-guide-call-h3,
-  .contact-box-guide-call-p {
-    font-size: 12px;
+  .contentTxtboxAns-liAddition{
+    line-height: 1.5em;
   }
 
-  .contact-box-guide-call-a-1 {
-    padding: 5px 10px;
-  }
-}
-
-@media screen and (max-width: 397px) {
-  .contact-box-guide-call-a-1 {
-    padding: 3px 6px;
-    font-size: 9px;
+  &-contentTxtboxAns-li-span{
+    font-weight: bolder;
+    color: black;
   }
 
-  .contact-box-guide-call-h3,
-  .contact-box-guide-call-h3 {
-    padding: 0px;
+  &-returnPolicy{
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #dfdcdc;
+    color: red;
+    font-weight:lighter;
   }
 
-  .contact-box-guide-call-a {
-    font-size: 12px;
-  }
-
-  .phone {
-    font-size: 20px;
-  }
-
-  .contact-box-guide-box {
-    bottom: 30px;
+  .contentTxtboxAns-liEdit{
+    list-style-type: inherit;
   }
 }
