--- a/faq.css
+++ b/faq.css
@@ -735,176 +735,129 @@ body {
       flex-shrink: 10;
 }
 
-.contact-container {
-  margin-top: 65px;
-  width: 100%;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.contact-box {
-  background-image: url(./image/customer-care.jpg);
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+.faq-container {
+  margin-top: 150px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 60vh;
-}
-
-.contact-box-msg {
-  text-align: center;
-  font-family: cursive;
-  color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.contact-box-msg-h1 {
-  color: white;
-  font-family: fantasy;
+.faq-container-boxtxt {
+  text-align: center;
 }
 
-.contact-box-msg-p {
-  color: white;
-  font-family: fantasy;
-  color: white;
+.faq-container-boxtxt-h1 {
+  line-height: 1em;
+  word-spacing: 3px;
 }
 
-.contact-box-msg-h1,
-.contact-box-msg-p {
-  text-shadow: 5px 5px 5px black;
-  font-family: cursive;
+.faq-container-boxtxt-span {
+  display: block;
+  font-size: 15px;
+  font-weight: lighter;
+  word-spacing: 3px;
 }
 
-.contact-guide {
+.faq-container-boxOptions {
+  margin-top: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  height: 40vh;
-  background-color: white;
 }
 
-.contact-box-guide-call {
-  background-color: white;
-  -webkit-box-shadow: 3px 3px 3px 3px #b8b7b7;
-          box-shadow: 3px 3px 3px 3px #b8b7b7;
-  width: 28rem;
+.faq-container-boxOptionSuggestion {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-radius: 5px;
+  background-color: #f5f5f5;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 10px 0;
+  border-radius: 3px;
+}
+
+.faq-container-boxOptionSuggestion-inp {
+  width: 25rem;
+  height: 30px;
   text-align: center;
-  height: 250px;
-  margin: 0 7px;
-}
-
-.contact-box-guide-box {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0 20px;
-  bottom: 15px;
-  width: 95%;
-}
-
-.phone {
-  font-size: 40px;
-}
-
-.contact-box-guide-call-p {
-  line-height: 1.5em;
-}
-
-.phone,
-.contact-box-guide-call-h3,
-.contact-box-guide-call-p {
-  padding: 5px 0;
-}
-
-.contact-box-guide-call-a-1 {
-  background-color: #6ca6dd;
-  padding: 8px 15px;
-  width: auto;
-  height: auto;
+  font-size: 12px;
   outline: none;
   border: none;
-  cursor: pointer;
-  color: white;
-  font-weight: bolder;
+  margin-left: 6px;
   border-radius: 3px;
-  -webkit-transition: background-color 0.5s;
-  transition: background-color 0.5s;
 }
 
-.contact-box-guide-call-a-1:hover {
-  background-color: #0e7dc2;
+.faq-container-boxOptionSuggestion-btn {
+  width: 50px;
+  height: 30px;
+  font-size: 11px;
+  outline: none;
+  border: none;
+  margin: 0 10px;
+  border-radius: 3px;
+  background-color: black;
+  color: white;
 }
 
-.contact-box-guide-call-a {
-  font-size: 14px;
+.faq-container-boxOptions-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-@media screen and (max-width: 530px) {
-  .contact-box-guide-call-box {
-    height: auto;
-  }
-  .contact-guide {
-    height: 30vh;
-  }
-  .contact-box-guide-box {
-    bottom: 80px;
-  }
-  .contact-box-guide-call {
-    height: 190px;
-  }
-  .phone {
-    font-size: 30px;
-  }
-  .contact-box-guide-call-h3,
-  .contact-box-guide-call-p {
-    font-size: 12px;
-  }
-  .contact-box-guide-call-a-1 {
-    padding: 5px 10px;
-  }
+.faq-container-boxOptionList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 15px;
 }
 
-@media screen and (max-width: 397px) {
-  .contact-box-guide-call-a-1 {
-    padding: 3px 6px;
-    font-size: 9px;
-  }
-  .contact-box-guide-call-h3,
-  .contact-box-guide-call-h3 {
-    padding: 0px;
-  }
-  .contact-box-guide-call-a {
-    font-size: 12px;
-  }
-  .phone {
-    font-size: 20px;
-  }
-  .contact-box-guide-box {
-    bottom: 30px;
-  }
+.faq-container-boxOptionListone {
+  width: 20rem;
+  height: 220px;
+  color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 3px;
+  margin: 10px;
+  -webkit-transition: -webkit-box-shadow 0.5s;
+  transition: -webkit-box-shadow 0.5s;
+  transition: box-shadow 0.5s;
+  transition: box-shadow 0.5s, -webkit-box-shadow 0.5s;
+  -webkit-box-shadow: 0px 0px 3px #2b2b2b91;
+          box-shadow: 0px 0px 3px #2b2b2b91;
 }
-/*# sourceMappingURL=contact-style.css.map */
+
+.faq-container-boxOptionListone:hover {
+  -webkit-box-shadow: 0px 0px 10px #00000085;
+          box-shadow: 0px 0px 10px #00000085;
+}
+/*# sourceMappingURL=faq.css.map */
