--- a/style/placeOrderScreen.scss
+++ b/style/placeOrderScreen.scss
@@ -379,7 +379,7 @@
               font-size: 17px;
               color: rgba(51, 51, 51, 0.789);
               font-weight: bold;
-              text-decoration: underline;
+              // text-decoration: underline;
 
               @include tabSize565 {
                 font-size: 15.4999995px;
