--- a/style/contact-style.scss
+++ b/style/contact-style.scss
@@ -72,69 +72,6 @@ body {
   }
 }
 
-.nav {
-  flex: 0 0 300px;
-  height: 100vh;
-  overflow-y: auto;
-  background-color: rgb(28, 28, 28);
-  color: white;
-  display: none;
-  z-index: 1000;
-
-  &-close-btn {
-    display: none;
-  }
-
-  &-open-btn {
-    padding-right: 15px;
-    display: none;
-
-    @include tab {
-      display: block;
-      font-size: 1.5rem;
-    }
-
-    @include phone {
-      position: absolute;
-      left: 10px;
-      top: 40%;
-    }
-  }
-
-  @include tab {
-    position: fixed;
-    width: 300px;
-
-    &-close-btn {
-      display: block;
-
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 1.5rem;
-    }
-
-    &.open {
-      display: block;
-    }
-  }
-
-  @include phone {
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    &.open {
-      display: flex;
-    }
-    &-open-btn {
-      display: block;
-      font-size: 20px;
-    }
-  }
-}
-
 .navul-content {
   text-align: center;
   // padding-right: 35px;
@@ -155,205 +92,6 @@ body {
   li :hover {
     background-color: #d6d6d6;
     color: #111;
-  }
-}
-
-.content-headerbox {
-  width: 100%;
-  top: 0;
-  z-index: 100;
-  position: fixed;
-  background-color: #f5f5f5;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-  // position: relative;
-
-  &-productName {
-    margin-right: 7vw;
-    flex: 0.1;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    font-size: 11px;
-
-    &_name h1 a {
-      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-        "Lucida Sans", Arial, sans-serif;
-      color: #000;
-    }
-
-    @include tab {
-      flex: 1;
-      justify-content: end;
-    }
-
-    @include phone {
-      margin: 0;
-      font-size: 8.5px;
-    }
-  }
-
-  &-right {
-    display: flex;
-
-    &_menu-list {
-      // flex: 1;
-
-      & ul {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-
-      & li {
-        margin: 10px;
-      }
-
-      & li a {
-        font-size: 12.49px;
-        padding: 15px;
-        // margin: 10px;
-        color: #333;
-        font-weight: 550;
-
-        &:hover {
-          transition: 0.5s;
-          background-color: #6ca6dda8;
-          color: #fff;
-        }
-      }
-
-      @include tab() {
-        display: none;
-      }
-    }
-
-    &-register {
-      // flex: 1;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      align-items: center;
-      padding: 0 10px;
-      display: flex;
-      flex-wrap: wrap;
-
-      &-login {
-        &-user-txt {
-          display: flex;
-
-          & p {
-            padding-left: 5px;
-          }
-
-          @include phone {
-            display: none;
-          }
-        }
-
-        &-user-fa {
-          & i {
-            display: none;
-
-            @include phone {
-              text-align: center;
-              display: block;
-              font-size: 15px;
-              // padding: 0px 25px;
-            }
-          }
-
-          & h6 {
-            display: none;
-
-            @include phone {
-              display: block;
-              text-align: center;
-              font-size: 11px;
-              // padding: 0px 20px;
-            }
-          }
-        }
-      }
-
-      &-signUp {
-        &-user-txt {
-          display: flex;
-
-          & p {
-            padding-left: 4px;
-          }
-
-          @include phone {
-            display: none;
-          }
-        }
-
-        &-user-fa {
-          display: none;
-
-          & i {
-            // font-size: 20px;
-
-            @include phone {
-              text-align: center;
-              display: block;
-              font-size: 15px;
-              // padding: 0px 25px;
-            }
-          }
-
-          & h6 {
-            font-size: 11px;
-          }
-
-          @include phone {
-            display: block;
-          }
-        }
-      }
-
-      &-login a,
-      &-signUp a {
-        margin: 10px;
-        // background-color: #3675afa8;
-        color: #1f1f1f;
-        font-size: 14.44px;
-        font-weight: 550;
-        display: block;
-      }
-
-      &-login a p,
-      &-signUp a p {
-        text-decoration: underline;
-      }
-
-      &-p {
-        display: inline-block;
-        margin-right: 15px;
-
-        & a {
-          color: #000;
-        }
-      }
-
-      @include phone {
-        padding: 0;
-      }
-    }
-  }
-
-  @include phone {
-    padding: 10px;
-    flex-direction: column;
   }
 }
 
@@ -735,7 +473,7 @@ body {
   box-shadow: 3px 3px 3px 3px #b8b7b7;
   width: 28rem;
   display: flex;
-  
+
   align-items: center;
   border-radius: 5px;
   text-align: center;
@@ -769,8 +507,7 @@ body {
 }
 
 .contact-box-guide-call-a-1 {
-  background-color: #6ca6dd
-  ;
+  background-color: #6ca6dd;
   padding: 8px 15px;
   width: auto;
   height: auto;
@@ -798,7 +535,7 @@ body {
     // padding: 0px 13px;
   }
 
-  .contact-guide{
+  .contact-guide {
     height: 30vh;
   }
 
